VR: Improve prompt button text and order according to UX

This change makes VR exit prompt's primary action 'EXIT VR', and the
secondary button 'BACK', as per discussion on the bug.

BUG=827681
R=bshe

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_vr
Change-Id: I2f3c264ea9f7130b3d45532df2167573f17ce289
Reviewed-on: https://chromium-review.googlesource.com/1070485
Reviewed-by: Biao She <bshe@chromium.org>
Commit-Queue: Christopher Grant <cjgrant@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561253}
Former-commit-id: 92e232642e3a174df5530b6a5b090272cf04641e